31, 32, 33, e 34: gerando primeira doc, acessando swagger, documentando criacao do ouser, trabalhando na criacao de access token
