# cmd/server/main.go
@@ -9,25 +9,30 @@ import (
 	"net/http"
 
 	"github.com/bianavic/fullcycle_apis/configs"
+	_ "github.com/bianavic/fullcycle_apis/docs"
 	"github.com/bianavic/fullcycle_apis/internal/entity"
 	"github.com/bianavic/fullcycle_apis/internal/infra/database"
 	"github.com/bianavic/fullcycle_apis/internal/infra/webserver/handlers"
+	httpSwagger "github.com/swaggo/http-swagger"
 )
-
-// @title Go Expert API Example
-// @version 1.0
-// @description Product API with authentication
-// @termsOfService http://swagger.io/terms/
-
-// @contact.name bianavic
-// @contact.url http://www.swagger.io/support
-// @contact.email support@swagger.io
-
-// @license.name Apache 2.0
-// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
 // @host localhost:8080
 // @BasePath /
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+
+// @title           Go Expert API Example
+// @version         1.0
+// @description     Product API with authentication
+// @termsOfService  http://swagger.io/terms/
+
+// @contact.name   bianavic
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host      localhost:8080
+// @BasePath  /
 // @securityDefinitions.apikey ApiKeyAuth
 // @in header
 // @name Authorization
@@ -56,6 +61,16 @@ func main() {
 	r.Use(middleware.WithValue("JwtExpiresIn", configs.JWTExpiresIn))
 	//r.Use(LogRequest)
 
+	// CORS middleware
+	//r.Use(cors.Handler(cors.Options{
+	//	AllowedOrigins:   []string{"http://localhost", "http://localhost:8080"}, // Specify allowed origins
+	//	AllowedMethods:   []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},   // HTTP methods
+	//	AllowedHeaders:   []string{"Accept", "Authorization", "Content-Type", "X-CSRF-Token"},
+	//	ExposedHeaders:   []string{"Link"},
+	//	AllowCredentials: true,
+	//	MaxAge:           300,
+	//}))
+
 	r.Route("/products", func(r chi.Router) {
 		r.Use(jwtauth.Verifier(configs.TokenAuth)) // pega o token
 		r.Use(jwtauth.Authenticator)               // valida token
@@ -68,6 +83,8 @@ func main() {
 
 	r.Post("/users", userHandler.CreateUser)
 	r.Post("/users/generate_token", userHandler.GetJWT)
+
+	r.Get("/docs/*", httpSwagger.Handler(httpSwagger.URL("http://localhost:8080/docs/docs.json")))
 
 	http.ListenAndServe(":8080", r)
 }
